2009-10-16  Richard Guenther  <rguenther@suse.de>

PR lto/41713
	* lto-streamer-out.c (lto_output_tree_ref): Handle DEBUG_EXPR_DECL
	the same as VAR_DECL.

	* gfortran.dg/lto/20091016-1_0.f90: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@152902 138bc75d-0d04-0410-961f-82ee72b054a4