gcc/lto-streamer-out.c
@@ -690,6 +690,7 @@ lto_output_tree_ref (struct output_block *ob, tree expr)
       break;
 
     case VAR_DECL:
+    case DEBUG_EXPR_DECL:
       gcc_assert (decl_function_context (expr) == NULL);
       output_record_start (ob, LTO_global_decl_ref);
       lto_output_var_decl_index (ob->decl_state, ob->main_stream, expr);
